Test docker push before PR
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - "main"
       - "release-*"
+      - "fix-docker-manifests-push"
   pull_request:
     branches:
       - "*"
@@ -99,7 +100,7 @@ jobs:
       - test-strimzi
       - build-containers
       - build-docs
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/fix-docker-manifests-push' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
