--- a/Makefile.docker
+++ b/Makefile.docker
@@ -25,6 +25,8 @@ ifdef DOCKER_ARCHITECTURE
   SBOM_DIR=$(TOPDIR)sbom/$(DOCKER_ARCHITECTURE)
 endif
 
+MANIFEST_ARCHITECTURES ?= $(DOCKER_ARCHITECTURE)
+
 all: docker_build docker_push
 
 docker_build_default:
@@ -62,8 +64,12 @@ docker_delete_archive_default:
 
 .PHONY: docker_amend_manifest_default
 docker_amend_manifest_default:
-	# Create / Amend the manifest
-	$(DOCKER_CMD) buildx imagetools create --append -t $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME):$(DOCKER_TAG) $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME):$(DOCKER_TAG)$(DOCKER_PLATFORM_TAG_SUFFIX)
+	# Create the multi-platform manifest from architecture-specific images
+	sources="" ; \
+	for arch in $$(echo "$(MANIFEST_ARCHITECTURES)" | tr ',' ' '); do \
+		sources="$$sources $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME):$(DOCKER_TAG)-$$arch" ; \
+	done ; \
+	$(DOCKER_CMD) buildx imagetools create -t $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME):$(DOCKER_TAG) $$sources
 
 .PHONY: docker_e2e_default
 docker_e2e_default:
@@ -78,11 +84,6 @@ docker_sign_manifest_default:
 	MANIFEST_DIGEST=$(shell docker buildx imagetools inspect $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME):$(DOCKER_TAG) --format '{{ json . }}' | jq -r .manifest.digest); \
 	cosign sign --recursive --timeout 6m0s --tlog-upload=false -a author=StrimziCI -a BuildID=$(BUILD_ID) -a Commit=$(BUILD_COMMIT) --key cosign.key $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME)@$$MANIFEST_DIGEST
 	@rm cosign.key
-
-.PHONY: docker_delete_manifest_default
-docker_delete_manifest_default:
-	# Delete the manifest to the registry, ignore the error if manifest doesn't exist
-	$(DOCKER_CMD) manifest rm $(DOCKER_REGISTRY)/$(DOCKER_ORG)/$(PROJECT_NAME):$(DOCKER_TAG) || true
 
 .PHONY: docker_sbom_default
 docker_sbom_default:
