Fixed the wrong usage of FQDN for controller.quorum.voters configuration
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/cluster-operator/src/test/resources/current-kafka-broker.conf
+++ b/cluster-operator/src/test/resources/current-kafka-broker.conf
@@ -31,7 +31,7 @@ controller.quorum.election.timeout.ms=1000
 controller.quorum.fetch.timeout.ms=2000
 controller.quorum.request.timeout.ms=2000
 controller.quorum.retry.backoff.ms=20
-controller.quorum.voters=3@my-cluster-controller-3.my-cluster-kafka-brokers.myproject.svc.cluster.local:9090,4@my-cluster-controller-4.my-cluster-kafka-brokers.myproject.svc.cluster.local:9090,5@my-cluster-controller-5.my-cluster-kafka-brokers.myproject.svc.cluster.local:9090
+controller.quorum.voters=3@my-cluster-controller-3.my-cluster-kafka-brokers.myproject.svc:9090,4@my-cluster-controller-4.my-cluster-kafka-brokers.myproject.svc:9090,5@my-cluster-controller-5.my-cluster-kafka-brokers.myproject.svc:9090
 controller.quota.window.num=11
 controller.quota.window.size.seconds=1
 controller.socket.timeout.ms=30000
