--- a/cluster-operator/src/test/resources/desired-kafka-broker.conf
+++ b/cluster-operator/src/test/resources/desired-kafka-broker.conf
@@ -73,7 +73,7 @@ transaction.state.log.replication.factor=3
 ##########
 process.roles=broker
 controller.listener.names=CONTROLPLANE-9090
-controller.quorum.voters=3@my-cluster-controller-3.my-cluster-kafka-brokers.myproject.svc.cluster.local:9090,4@my-cluster-controller-4.my-cluster-kafka-brokers.myproject.svc.cluster.local:9090,5@my-cluster-controller-5.my-cluster-kafka-brokers.myproject.svc.cluster.local:9090
+controller.quorum.voters=3@my-cluster-controller-3.my-cluster-kafka-brokers.myproject.svc:9090,4@my-cluster-controller-4.my-cluster-kafka-brokers.myproject.svc:9090,5@my-cluster-controller-5.my-cluster-kafka-brokers.myproject.svc:9090
 
 ##########
 # KRaft metadata log dir configuration
