--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - "main"
       - "release-*"
-      - "fix-docker-manifests-push"
   pull_request:
     branches:
       - "*"
@@ -97,10 +96,10 @@ jobs:
     name: Push Containers
     needs:
       - build-strimzi
-#      - test-strimzi
+      - test-strimzi
       - build-containers
       - build-docs
-    if: ${{ github.ref == 'refs/heads/fix-docker-manifests-push' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -108,7 +107,7 @@ jobs:
       id-token: write
     env:
       DOCKER_REGISTRY: "quay.io"
-      DOCKER_ORG: "jstejska"
+      DOCKER_ORG: "strimzi"
       DOCKER_TAG: "latest"
     steps:
       - uses: actions/checkout@v6
