Fix docker manifests push after docker upgrade (#12416)
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/docker-images/kafka-based/Makefile
+++ b/docker-images/kafka-based/Makefile
@@ -1,6 +1,6 @@
 TOPDIR = $(dir $(lastword $(MAKEFILE_LIST)))
 RELEASE_VERSION ?= $(shell cat $(TOPDIR)/release.version)
-DOCKER_TARGETS = docker_build docker_push docker_tag docker_load docker_save docker_amend_manifest docker_push_manifest docker_delete_manifest docker_delete_archive docker_sbom docker_push_sbom
+DOCKER_TARGETS = docker_build docker_push docker_tag docker_load docker_save docker_amend_manifest docker_delete_archive docker_sbom docker_push_sbom
 DOCKER_TAG ?= latest
 
 .PHONY: build clean release all $(DOCKER_TARGETS)
@@ -29,18 +29,12 @@ docker_amend_manifest:
 docker_e2e:
 	./build.sh docker_e2e
 
-docker_push_manifest:
-	./build.sh docker_push_manifest
-
 docker_sign_manifest:
 	./build.sh docker_sign_manifest
 
 # TODO - remove gha prefix once migrated fully to gha
 docker_gha_sign_manifest:
 	./build.sh docker_gha_sign_manifest
-
-docker_delete_manifest:
-	./build.sh docker_delete_manifest
 
 docker_delete_archive:
 	./build.sh docker_delete_archive
