--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <mockito.version>5.21.0</mockito.version>
         <opentest4j.version>1.2.0</opentest4j.version>
         <jupiter.version>6.0.0</jupiter.version>
-        <strimzi-test-container.version>0.114.0</strimzi-test-container.version>
+        <strimzi-test-container.version>0.115.0-rc1</strimzi-test-container.version>
         <wiremock.version>3.13.2</wiremock.version>
         <valid4j.version>1.1</valid4j.version>
         <javax.json.version>1.1.4</javax.json.version>
